# NetPad

./: .editorconfig  .gitignore  CONTRIBUTING.md  Directory.Build.props  LICENSE  NetPad.sln  README.md  global.json  justfile
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml  omnisharp-build.yml  pack-electron.yml  pack-tauri.yml  publish-cli.yml  release.yml
NetPad/: App.axaml  App.axaml.cs  NetPad.csproj  Program.cs  ViewLocator.cs
NetPad.Core/: NetPad.Core.csproj  Settings.cs
NetPad.Core/Exceptions/: InvalidQueryFormat.cs
NetPad.Core/Queries/: IQueryManager.cs  Query.cs  QueryConfig.cs  QueryManager.cs
NetPad.Core/Runtimes/: IQueryRuntimeInputReader.cs  IQueryRuntimeOutputReader.cs  QueryAppDomain.cs
NetPad.Core/Sessions/: ISession.cs  Session.cs
NetPad.Core/TextEditing/: ITextEditingEngine.cs
NetPad.OmniSharpWrapper/: OmniSharpServer.cs  OmniSharpServerConfigurationBuilder.cs
NetPad.OmniSharpWrapper/Stdio/: OmniSharpServerStdioProcessAccessor.cs  OmniSharpStdioServer.cs  OmniSharpStdioServerConfigurationBuilder.cs
NetPad.OmniSharpWrapper/Utilities/: ProcessHandler.cs
NetPad.UI/: NetPad.UI.csproj
NetPad/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
NetPad/Views/: MainWindow.axaml  MainWindow.axaml.cs  MainWindowScratchPad.cs
docs/: Download.md  README.md  SPA App.md  Supporting a new .NET Version.md  _navbar.md  _sidebar.md  index.html
docs/technical-docs/: App-Components.md  IPC.md  README.md  Solution Structure.md  Solution-Structure.md  Startup.md
docs/user-docs/: Data-Connections.md  Dump.md  Editor.md  NET-SDK.md  NuGet-&-Assemblies.md  README.md  Troubleshooting.md
docs/wiki/: CLI.md  Data-Connections.md  Dump.md  Editor.md  How-Tos.md  NET-SDK.md  NuGet-&-Assemblies.md  README.md  Styling.md  Troubleshooting.md  Util.md
scripts/: build.sh  nuget-pack-npad.sh  nuget-push-npad.sh  package-electron.sh  package-electron_deprecated.sh  package-tauri-linux-x64.sh
src/: .editorconfig  Directory.Build.props  Directory.Packages.props  NetPad.sln  NetPad.sln.DotSettings
src/Apps/NetPad.Apps.App/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json5  tauri.conf.linux.json5
src/Apps/NetPad.Apps.App/tauri-app/src-tauri/capabilities/: default.json
src/Apps/NetPad.Apps.App/tauri-app/src-tauri/src/: dotnet_server_manager.rs  lib.rs  server_manager.rs
src/Apps/NetPad.Apps.Shells.Tauri/TauriApp/src-tauri/: Cargo.toml  tauri.conf.json5  tauri.conf.linux-arm64.json5  tauri.conf.linux-x64.json5  tauri.conf.mac-arm64.json5  tauri.conf.mac-x64.json5  tauri.conf.win-arm64.json5  tauri.conf.win-x64.json5
src/Apps/NetPad.Apps.Shells.Tauri/TauriApp/src-tauri/capabilities/: default.json
src/Apps/NetPad.Apps.Shells.Tauri/TauriApp/src-tauri/icons/: icon.icns
src/Apps/NetPad.Apps.Shells.Tauri/TauriApp/src-tauri/loader/: index.html
src/Apps/NetPad.Apps.Shells.Tauri/TauriApp/src-tauri/src/: commands.rs  dotnet_server_manager.rs  errors.rs  lib.rs  main.rs  startup.rs  windows.rs
src/Apps/NetPad.Apps.Shells.Tauri/TauriApp/src-tauri/windows/: nsis-installer.nsi
src/NetPad/: NetPad.csproj  (+2 more)
src/NetPad.Avalonia/: App.axaml  DIExtensions.cs  NetPad.Avalonia.csproj  Startup.cs  ViewLocator.cs
src/NetPad.OmniSharpWrapper/: IOmniSharpServer.cs  OmniSharpServer.cs  OmnisharpPackets.cs
(+2344 files in other folders)
