[package]
name = "NetPad"
version = "0.9.1"
description = "A cross-platform C# editor and playground"
authors = ["Tareq Imbasher"]
repository = "https://github.com/tareqimbasher/NetPad"
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.1", features = ["config-json5"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4", features = ["config-json5", "devtools"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-log = "2.3"
tauri-plugin-shell = "2.2"
dunce = "1.0.5"
thiserror = "1.0.64"
color-eyre = { version =  "0.6.3", default-features = false }
better-panic = "0.3.0"
human-panic = "2.0.1"
url = "2.5.2"
